#if(WIN32 AND NOT UNIX)
#add_subdirectory(Graphics)
#add_subdirectory(Input)
#endif()

#add_subdirectory(Utility)
#add_subdirectory(Kernel)
#add_subdirectory(Script)
#add_subdirectory(Network)
#add_subdirectory(Physics)
#add_subdirectory(Signal)
#add_subdirectory(Database)
#add_subdirectory(Asteroids)
#add_subdirectory(Timer)
#add_subdirectory(Audio)


add_subdirectory(Test)
add_subdirectory(Jet)
